<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MessageViewPagerContainerFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/messageTabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tabLayoutHeight"
        app:tabGravity="start"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/tabIndicator"
        app:tabIndicatorHeight="@dimen/tabIndicatorHeight"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/CustomTabText"
        app:tabTextColor="@color/textColor" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/messageViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/tabLayoutHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageTabLayout" />


</FrameLayout>