...
        android:layout_marginStart="@dimen/appWidgetBorderMargin"
        android:layout_marginTop="@dimen/appWidgetBorderMargin"
        android:background="@color/widgetBackgroundPrimary"
        android:gravity="center">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="@dimen/appWidgetIconSize"
            android:layout_height="@dimen/appWidgetIconSize"
            android:contentDescription="@string/appIcon"
            android:src="@mipmap/ic_app_icon" />
    </LinearLayout>

...
