<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trimble.ttm.routemanifest.ui.activities.AuthenticateActivity">

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarBackground"/>

    <com.trimble.ttm.formlibrary.customViews.ProgressErrorView
        android:id="@+id/progressErrorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar" />

</RelativeLayout>